--- a/client/public/index.html
+++ b/client/public/index.html
@@ -57,7 +57,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
 <script>
-  jQuery("#top-picks").owlCarousel({
+  $("#top-picks").owlCarousel({
     autoplay: true,
     loop: true,
     rewind: false,
@@ -85,7 +85,6 @@
       }
     }
   });
-
 </script>
 <script>
   jQuery("#latest-picks").owlCarousel({
@@ -116,7 +115,6 @@
       }
     }
   });
-
 </script>
 <script>
   $(function () {
