user_booking ui done

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/index.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/turf-details.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/user-bookings.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet"
