--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -11,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/assets/images/favicon.png">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/header.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/footer.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/responsive.css">
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/turf-details.css">
   <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/user-bookings.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/login.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet"
